k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ev-charging
  labels:
    name: ev-charging
    env: production
